--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "node-fetch": "^3.3.0",
+    "nodemailer": "^6.10.0",
     "puppeteer": "^24.4.0"
   },
   "type": "module"
