--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cheerio": "^1.0.0",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "node-fetch": "^3.3.0",
-    "nodemailer": "^6.10.0",
-    "puppeteer": "^24.4.0"
+    "cheerio": "1.0.0",
+    "date-fns": "4.1.0",
+    "dotenv": "16.4.7",
+    "node-fetch": "3.3.2",
+    "nodemailer": "6.10.0",
+    "puppeteer": "24.6.0"
   },
   "type": "module"
 }
